Remove refresh button, auto-update every 6 hours + on startup

--- a/index.html
+++ b/index.html
@@ -321,14 +321,7 @@
         <p>Track your fantasy team points in real-time</p>
     </div>
 
-    <div class="controls">
-        <button class="refresh-btn" onclick="refreshPoints()">
-            <span class="spinner"></span>
-            <span>Refresh Points</span>
-        </button>
-    </div>
-
-    <div class="last-updated" id="lastUpdated">Last updated: Never</div>
+    <div class="last-updated" id="lastUpdated">Points auto-update every 6 hours</div>
 
     <div class="legend">
         <div class="legend-item">
