added rajat and reduced update time

--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
         </button>
     </div>
 
-    <div class="last-updated" id="lastUpdated">Scores can be refreshed once every 30 minutes</div>
+    <div class="last-updated" id="lastUpdated">Scores can be refreshed once every 5 minutes</div>
 
     <div class="legend">
         <div class="legend-item">
@@ -711,6 +711,23 @@
                     { name: "Mitchell Santner", team: "New Zealand", role: "Bowler", status: "Normal" },
                     { name: "Keshav Maharaj", team: "South Africa", role: "Bowler", status: "Normal" },
                     { name: "Jofra Archer", team: "England", role: "Bowler", status: "Normal" }
+                ]
+            },
+            {
+                name: "Team Rajat",
+                teamWinner: "India",
+                players: [
+                    { name: "Abhishek Sharma", team: "India", role: "Batsman", status: "Captain" },
+                    { name: "Travis Head", team: "Australia", role: "Batsman", status: "Normal" },
+                    { name: "Suryakumar Yadav", team: "India", role: "Batsman", status: "Normal" },
+                    { name: "Ryan Rickelton", team: "South Africa", role: "Batsman", status: "Normal" },
+                    { name: "Hardik Pandya", team: "India", role: "All-Rounder", status: "Vice-Captain" },
+                    { name: "Cameron Green", team: "Australia", role: "All-Rounder", status: "Normal" },
+                    { name: "Marco Jansen", team: "South Africa", role: "All-Rounder", status: "Normal" },
+                    { name: "Mitchell Santner", team: "New Zealand", role: "Bowler", status: "Normal" },
+                    { name: "Jacob Duffy", team: "New Zealand", role: "Bowler", status: "Normal" },
+                    { name: "Maheesh Theekshana", team: "Sri Lanka", role: "Bowler", status: "Normal" },
+                    { name: "Adil Rashid", team: "England", role: "Bowler", status: "Normal" }
                 ]
             }
         ];
